--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-certifi==2024.7.4
-chardet==3.0.4
-datadog==0.26.0
-decorator==4.3
-idna==3.7
-requests==2.32.2
-simplejson==3.16
-urllib3==1.26.19
-pytz==2019.3
+certifi>=2024.7.4
+chardet==3.*
+datadog==0.26.*
+decorator==4.*
+idna==3.*
+requests==2.*
+setuptools==75.*
+simplejson==3.*
+urllib3==1.*
+pytz>=2019.3
